Add endpoint to retrieve Intervention reference data (#65)